--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@duckies/eslint-config": "workspace:*",
+    "@duckies/eslint-config": "*",
     "bumpp": "8.2.1",
     "eslint": "8.21.0",
     "typescript": "4.7.4"
