--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "5.32.0"
   },
   "devDependencies": {
-    "eslint": "8.21.0"
+    "eslint": "8.21.0",
+    "typescript": "4.7.4"
   }
 }
