--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -14,6 +14,7 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
+    "@duckies/eslint-config-react": "workspace:*",
     "@duckies/eslint-config-vue": "workspace:*"
   },
   "devDependencies": {
