--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "John Gilbert <https://github.com/duckies>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint ./packages/*",
     "test": "pnpm -r run test",
     "prepare": "pnpm -r run stub",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
@@ -17,5 +17,10 @@
     "bumpp": "8.2.1",
     "eslint": "8.23.0",
     "typescript": "4.7.4"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "quoteProps": "consistent"
   }
 }
